Database connection works

--- a/BlazorWebUi/IOTHubBlazor/Server/IOTHubBlazor.Server.csproj
+++ b/BlazorWebUi/IOTHubBlazor/Server/IOTHubBlazor.Server.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Client\IOTHubBlazor.Client.csproj" />
+    <ProjectReference Include="..\IOTHubBlazor.DAL\IOTHubBlazor.DAL.csproj" />
     <ProjectReference Include="..\Shared\IOTHubBlazor.Shared.csproj" />
   </ItemGroup>
 
